@@ -1,3 +1,5 @@
+	* add feature to periodically close files (to make windows clear disk cache)
+	* fix bug in torrent_handle::file_status
 	* fix issue with peers not updated on metadata from magnet links
 
 1.1.2 release
